Update index html to fit the project

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="Description" content="Code pour le TP3 de INF8808.">
-        <title>TP3 | INF8808</title>
+        <meta name="Description" content="Project of team 10">
+        <title>Data viz project | INF8808</title>
 
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/typography.css">
@@ -14,10 +14,10 @@
       <body>
         <header>
           <h1>
-            Trees planted in Montreal neighborhoods
+            A heatmap of the times french speaking medias made the most views by posting on tiktok
           </h1>
           <h2>
-            From 2010 to 2020
+            From Sunday to Saturday
           </h2>
         </header>
         <main>
