first draft of songs visualization

--- a/src/index.html
+++ b/src/index.html
@@ -76,16 +76,13 @@
     <div id="songs" class="tab-content">
       <header>
         <h1>
-          Songs
+          Average view count for videos according to the song used
         </h1>
-        <h2>
-          Placeholder
-        </h2>
       </header>
       <main>
         <div class="viz-container">
-          <div class="songs-graph" id="songs-heatmap">
-            <svg class="songs-heatmap-svg"></svg>
+          <div id="songs-beeswarm-plot">
+            <svg class="songs-svg"></svg>
           </div>
         </div>
       </main>
