--- a/src/index.html
+++ b/src/index.html
@@ -84,8 +84,10 @@
       </header>
       <main>
         <div class="viz-container">
-          <div id="songs-beeswarm-plot">
-            <svg class="songs-svg"></svg>
+          <div id="songs-viz-wrapper">
+            <div id="songs-beeswarm-plot">
+              <svg class="songs-svg"></svg>
+            </div>
           </div>
         </div>
       </main>
