moved video posting viz to the right tab

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
     <div id="overview" class="tab-content">
       <header>
         <h1>
-          A heatmap of the times french speaking medias made the most views by posting on tiktok
+          Overview
         </h1>
         <h2>
-          From Sunday to Saturday
+          Placeholder
         </h2>
       </header>
       <main>
@@ -94,10 +94,10 @@
     <div id="video-posting" class="tab-content">
       <header>
         <h1>
-          Video Posting
+          A heatmap of the times french speaking medias made the most views by posting on tiktok
         </h1>
         <h2>
-          Placeholder
+          From Sunday to Saturday
         </h2>
       </header>
       <main>
