--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,22 @@
           <div class="video-length-graph" id="video-length-heatmap">
             <svg class="video-length-heatmap-svg"></svg>
           </div>
+          <br>
+          <br>
+          <div class="categories">
+            <button id="likes">
+              <span>Likes</span>
+            </button>
+            <button id="commentaires">
+              <span>Commentaires</span>
+            </button>
+            <button id="vues">
+              <span>Vues</span>
+            </button>
+            <button id="partages">
+              <span>Partages</span>
+            </button>
+          </div>
         </div>
       </main>
     </div>
@@ -87,6 +103,8 @@
           <div id="songs-beeswarm-plot">
             <svg class="songs-svg"></svg>
           </div>
+
+          
         </div>
       </main>
     </div>
