histogramme mis a jour

--- a/src/index.html
+++ b/src/index.html
@@ -68,26 +68,13 @@
         </h2>
       </header>
       <main>
-        <div class="viz-container">
+        <div class="video-viz-container">
           <div class="video-length-graph" id="video-length-heatmap">
             <svg class="video-length-heatmap-svg"></svg>
           </div>
           <br>
           <br>
-          <div class="categories">
-            <button id="likes">
-              <span>Likes</span>
-            </button>
-            <button id="commentaires">
-              <span>Commentaires</span>
-            </button>
-            <button id="vues">
-              <span>Vues</span>
-            </button>
-            <button id="partages">
-              <span>Partages</span>
-            </button>
-          </div>
+          
         </div>
       </main>
     </div>
