video length update

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
         </h2>
       </header>
       <main>
-        <div class="viz-container">
+        <div class="video-viz-container">
           <div class="video-length-graph" id="video-length-heatmap">
             <svg class="video-length-heatmap-svg"></svg>
           </div>
