premier jet hashtags

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         </h2>
       </header>
       <main>
-        <div class="viz-container">
+        <div class="hashtags-viz-container">
           <div class="hashtags-graph" id="hashtags-heatmap">
             <svg class="hashtags-heatmap-svg"></svg>
           </div>
