first mockup version of the graph

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,10 @@
       </header>
       <main>
         <div class="viz-container">
-          <div class="overview-graph" id="overview-heatmap">
-            <svg class="overview-heatmap-svg"></svg>
+          <div id="overview-viz-wrapper">
+            <div class="overview-graph" id="overview-heatmap">
+              <svg class="overview-heatmap-svg"></svg>
+            </div>
           </div>
         </div>
       </main>
