ajout du lineChart

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,10 @@
           <div class="video-length-graph" id="video-length-heatmap">
             <svg class="video-length-heatmap-svg"></svg>
           </div>
+
+          <div class="video-length-graph-evolve" id="video-length-evolve-heatmap">
+            <svg class="video-length-evolve-heatmap-svg"></svg>
+          </div>
           <br>
           <br>
           
