--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,12 @@
 
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/typography.css">
-
-    <script src="https://d3js.org/d3.v7.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"/> <!-- Ion.RangeSlider CSS -->
+    
     <script type="module" src="index.js"></script>
+    <script src="https://d3js.org/d3.v7.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script> <!-- Ion.RangeSlider -->
   </head>
 
   <body>
@@ -107,8 +110,6 @@
               <svg class="songs-svg"></svg>
             </div>
           </div>
-
-          
         </div>
       </main>
     </div>
