added base logic for media dropdown menu

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/typography.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"/> <!-- Ion.RangeSlider CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"> <!-- Font Awesome -->
     
     <script type="module" src="index.js"></script>
     <script src="https://d3js.org/d3.v7.js"></script>
