controls on the left, and panel on the right

--- a/src/index.html
+++ b/src/index.html
@@ -38,17 +38,21 @@
       <main>
         <div class="viz-container" id="#overview-viz-container">
           <div id="overview-viz-wrapper">
-            <div id="overview-panel"></div>
+            <div id="overview-controls">
+              <h3>Sort By</h3>
+              <div id="overview-controls-sort-by"></div>
+              <h3>Media Selection</h3>
+              <div id="overview-controls-media-selection"></div>
+
+              <h3>Time Range</h3>
+              <div id="overview-controls-time-range"></div>
+            </div>
             <div class="overview-graph-and-controls">
               <div class="overview-graph" id="overview-heatmap">
                 <svg class="overview-heatmap-svg"></svg>
               </div>
-              <div id="overview-controls"></div>
             </div>
-            <div id="overview-media-selection">
-              <h3>Media Selection</h3>
-              <p class="overview-title-label">Select which media to show on the graph</p>
-            </div>
+            <div id="overview-panel"></div>
           </div>
         </div>
       </main>
