hashtags viz logic

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,13 @@
         </h2>
       </header>
       <main>
+        <div id="hashtags-controls">
+          <h3>Sort By</h3>
+          <div id="hashtags-controls-sort-by"></div>
+
+          <h3>Time Range</h3>
+          <div id="hashtags-controls-time-range"></div>
+        </div>
         <div class="hashtags-viz-container">
           <div class="hashtags-graph" id="hashtags-heatmap">
             <svg class="hashtags-heatmap-svg"></svg>
