Add media filter to video posting page

--- a/src/index.html
+++ b/src/index.html
@@ -135,10 +135,22 @@
         </h2>
       </header>
       <main>
-        <div class="viz-container">
+        <div class="viz-container" id="#vp-viz-container">
+          <div id="vp-viz-wrapper">
+            <div id="vp-controls">
+              <h3>Sort By</h3>
+              <div id="vp-controls-sort-by"></div>
+              <h3>Media Selection</h3>
+              <div id="vp-controls-media-selection"></div>
+
+              <h3>Time Range</h3>
+              <div id="vp-controls-time-range"></div>
+            </div>
+          </div>
           <div class="video-posting-graph" id="video-posting-heatmap">
             <svg class="video-posting-heatmap-svg"></svg>
           </div>
+        </div>
         </div>
       </main>
     </div>
