--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,12 @@
         <h1>
           Overview
         </h1>
-        <h2>
-          Placeholder
-        </h2>
       </header>
       <main>
-        <div class="viz-container" id="#overview-viz-container">
+        <div class="viz-container" id="overview-viz-container">
           <div id="overview-viz-wrapper">
             <div id="overview-controls">
+              <h2>Controls</h2>
               <h3>Sort By</h3>
               <div id="overview-controls-sort-by"></div>
               <h3>Media Selection</h3>
@@ -63,21 +61,21 @@
         <h1>
           Hashtags
         </h1>
-        <h2>
-          Placeholder
-        </h2>
       </header>
       <main>
-        <div id="hashtags-controls">
-          <h3>Sort By</h3>
-          <div id="hashtags-controls-sort-by"></div>
+        <div id="hashtags-viz-wrapper">
+          <div id="hashtags-controls">
+            <h2>Controls</h2>
+            <h3>Sort By</h3>
+            <div id="hashtags-controls-sort-by"></div>
 
-          <h3>Time Range</h3>
-          <div id="hashtags-controls-time-range"></div>
-        </div>
-        <div class="hashtags-viz-container">
-          <div class="hashtags-graph" id="hashtags-heatmap">
-            <svg class="hashtags-heatmap-svg"></svg>
+            <h3>Time Range</h3>
+            <div id="hashtags-controls-time-range"></div>
+          </div>
+          <div class="hashtags-viz-container">
+            <div class="hashtags-graph" id="hashtags-heatmap">
+              <svg class="hashtags-heatmap-svg"></svg>
+            </div>
           </div>
         </div>
       </main>
@@ -88,12 +86,9 @@
         <h1>
           Video Length
         </h1>
-        <h2>
-          Placeholder
-        </h2>
       </header>
       <main>
-        <div class="viz-container" id="#video-viz-container">
+        <div class="viz-container" id="video-viz-container">
           <div id="video-viz-wrapper">
             <div id="video-viz">
               <div id="video-controls">
@@ -151,17 +146,16 @@
         </h2>
       </header>
       <main>
-        <div class="viz-container" id="#vp-viz-container">
-          <div id="vp-viz-wrapper">
-            <div id="vp-controls">
-              <h3>Sort By</h3>
-              <div id="vp-controls-sort-by"></div>
-              <h3>Media Selection</h3>
-              <div id="vp-controls-media-selection"></div>
+        <div class="vp-viz-wrapper" id="vp-viz-container">
+          <div id="vp-controls">
+            <h2>Controls</h2>
+            <h3>Sort By</h3>
+            <div id="vp-controls-sort-by"></div>
+            <h3>Media Selection</h3>
+            <div id="vp-controls-media-selection"></div>
 
-              <h3>Time Range</h3>
-              <div id="vp-controls-time-range"></div>
-            </div>
+            <h3>Time Range</h3>
+            <div id="vp-controls-time-range"></div>
           </div>
           <div class="video-posting-graph" id="video-posting-heatmap">
             <svg class="video-posting-heatmap-svg"></svg>
