removed useless code from overview tab

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="tab-container">
-      <button id="overview-tab" class="tab-link">Overview of media outlets</button>
+      <button id="overview-tab" class="tab-link">Media Outlets</button>
       <button id="hashtags-tab" class="tab-link">Hashtags</button>
       <button id="video-length-tab" class="tab-link">Video Length</button>
       <button id="songs-tab" class="tab-link">Songs</button>
@@ -29,7 +29,7 @@
     <div id="overview" class="tab-content">
       <header>
         <h1>
-          Overview
+          Media Outlets
         </h1>
       </header>
       <main>
@@ -46,8 +46,8 @@
               <div id="overview-controls-time-range"></div>
             </div>
             <div class="overview-graph-and-controls">
-              <div class="overview-graph" id="overview-heatmap">
-                <svg class="overview-heatmap-svg"></svg>
+              <div class="overview-graph" id="overview-graph">
+                <svg class="overview-svg"></svg>
               </div>
             </div>
             <div id="overview-panel"></div>
