Implement radio buttons for video posting

--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
     <div id="video-posting" class="tab-content">
       <header>
         <h1>
-          A heatmap of the times french speaking medias made the most views by posting on tiktok
+          The Habits And Metrics Of French Speaking Medias on Tiktok
         </h1>
         <h2>
           From Monday to Sunday
@@ -149,8 +149,18 @@
         <div class="vp-viz-wrapper" id="vp-viz-container">
           <div id="vp-controls">
             <h2>Controls</h2>
-            <h3>Sort By</h3>
+            <h3>Metric</h3>
             <div id="vp-controls-sort-by"></div>
+            <div class="radio-buttons" id="vp-radio-buttons" >
+              <label>
+                <input type="radio" name="viewType" value="true" title="Total" checked>
+                <h3>Total</h3>
+              </label>
+              <label>
+                <input type="radio" name="viewType" value="false">
+                <h3>Weekly Average</h3>
+              </label>
+            </div>
             <h3>Media Selection</h3>
             <div id="vp-controls-media-selection"></div>
 
