completed hashtags styling

--- a/src/index.html
+++ b/src/index.html
@@ -121,17 +121,17 @@
         </h1>
       </header>
       <main>
-        <div class="viz-container">
-          <div id="songs-viz-wrapper">
+        <div id="songs-viz-wrapper">
+          <div id="songs-plot-wrapper">
             <div id="songs-control">
               <div class="songs-dropdown"></div>
               <div class="songs-slider"></div>
             </div>
-            <div id="songs-panel"></div>
             <div id="songs-beeswarm-plot">
               <svg class="songs-svg"></svg>
             </div>
           </div>
+          <div id="songs-panel"></div>
         </div>
       </main>
     </div>
@@ -139,11 +139,8 @@
     <div id="video-posting" class="tab-content">
       <header>
         <h1>
-          A heatmap of the times french speaking medias made the most views by posting on tiktok
+          Video Posting
         </h1>
-        <h2>
-          From Monday to Sunday
-        </h2>
       </header>
       <main>
         <div class="vp-viz-wrapper" id="vp-viz-container">
