added legend to video length visualization

--- a/src/index.html
+++ b/src/index.html
@@ -103,8 +103,8 @@
               </div>
               <br>
               <div class="video-viz-container">
-                <div class="video-length-graph" id="video-length-heatmap">
-                  <svg class="video-length-heatmap-svg"></svg>
+                <div class="video-length-graph" id="video-length-graph">
+                  <svg class="video-length-svg"></svg>
                 </div>
               </div>
             </div>
