completed video length styling

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
           <div id="overview-viz-wrapper">
             <div id="overview-controls">
               <h2>Controls</h2>
-              <h3>Sort By</h3>
+              <h3>Metric</h3>
               <div id="overview-controls-sort-by"></div>
               <h3>Media Selection</h3>
               <div id="overview-controls-media-selection"></div>
@@ -93,15 +93,14 @@
             <div id="video-viz">
               <div id="video-controls">
                 <div class="controls-1">
-                  <h4>Sort By</h3>
+                  <div id="video-dropdown-title">Metric</div>
                   <div id="video-controls-sort-by"></div>
                 </div>
                 <div class="controls-2">
-                  <h4>Time Range</h3>
+                  <div id="video-slider-title">Time Range</div>
                   <div id="video-controls-time-range"></div>
                 </div>
               </div>
-              <br>
               <div class="video-viz-container">
                 <div class="video-length-graph" id="video-length-graph">
                   <svg class="video-length-svg"></svg>
