--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
           <li><h3>Media outlets :</h3> this visualization shows the evolution of viewer engagement for different media outlets</li>
           <li><h3>Hashtags :</h3> this visualization shows the top 10 hashtags that generate the most viewer engagement</li>
           <li><h3>Video length :</h3> this visualization shows what video length generates the most and the least amount of viewer engagement</li>
-          <li><h3>Songs :</h3> this visualization shows which songs generate the most and the least amount of viewer angagement</li>
+          <li><h3>Songs :</h3> this visualization shows which songs generate the most and the least amount of viewer engagement</li>
           <li><h3>Video postings :</h3> this visualization shows what time of day and what day of week seem to generate the most amount of viewer engagement</li>
         </ul>
         <p>Have fun exploring the data!</p>
