--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <button id="hashtags-tab" class="tab-link">Hashtags</button>
       <button id="video-length-tab" class="tab-link">Video Length</button>
       <button id="songs-tab" class="tab-link">Songs</button>
-      <button id="video-posting-tab" class="tab-link">Video Posting</button>
+      <button id="video-posting-tab" class="tab-link">Posting and engagement</button>
     </div>
 
     <div id="about-us" class="tab-content">
@@ -44,7 +44,7 @@
           <li><h3>Hashtags :</h3> this visualization shows the top 10 hashtags that generate the most viewer engagement</li>
           <li><h3>Video length :</h3> this visualization shows what video length generates the most and the least amount of viewer engagement</li>
           <li><h3>Songs :</h3> this visualization shows which songs generate the most and the least amount of viewer angagement</li>
-          <li><h3>Video postings :</h3> this visualization shows what time of day and what day of week seem to generate the most amount of viewer engagement</li>
+          <li><h3>Posting and engagement :</h3> this visualization shows the posting habits and engagement of french medias through the week</li>
         </ul>
         <p>Have fun exploring the data!</p>
       </main>
@@ -166,8 +166,11 @@ In this visualization, explore the top 10 hashtags that generate the highest eng
     <div id="video-posting" class="tab-content">
       <header>
         <h1>
-          Video Posting
+          Posting and engagement
         </h1>
+        <h2 class="title">
+          In this visualization, you can see the total or weekly average of a metric of your choice for every weekday throughout a period of your choice. 
+                  </h2>
       </header>
       <main>
         <div class="vp-viz-wrapper" id="vp-viz-container">
