added title and chapeau to songs tab

--- a/src/index.html
+++ b/src/index.html
@@ -144,8 +144,11 @@ In this visualization, explore the top 10 hashtags that generate the highest eng
     <div id="songs" class="tab-content">
       <header>
         <h1>
-          Songs
+          "Suspense, horror, piano and music box" is the most used song from our data
         </h1>
+        <h2 class="title">
+          In this visualization, you can explore which songs help generate the most amount of engagement on a Tiktok video
+        </h2>
       </header>
       <main>
         <div id="songs-viz-wrapper">
