added media display names in panel, and changed placeholder

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
           Media Outlets
         </h1>
         <h2 class="title">
-          placeholder
+          In this visualization, explore the evolution of french speaking media on TikTok based on view count, comment count, share count, and like count (totaled for every month). You have the option to select the media you want on the graph, and to filter the data by upload date using the slider
         </h2>
       </header>
       <main>
