--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
         </h1>
         <h2 class="title">
           The beeswarm plot below shows the average amount of viewer engagement for each song used in videos from our dataset.
-          More information for a song can be viewed by clicking on its corresponding point, and a few filters are availible above the visualization.
+          More information for a song can be viewed by clicking on its corresponding point, and a few filters are available above the visualization.
         </h2>
       </header>
       <main>
