ajout des headers

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
           Video Length
         </h1>
         <h2 class="title">
-          placeholder
+          In this visualization, explore the lengths of videos that generate the most engagement from Tiktok Platform users based on the number of views, number of comments, number of shares, and number of likes (averaged). In addition, you have the option to filter the data by upload date using the slider
         </h2>
       </header>
       <main>
