--- a/src/index.html
+++ b/src/index.html
@@ -119,10 +119,11 @@
     <div id="video-length" class="tab-content">
       <header>
         <h1>
-          Videos posted on TikTok are short-lived, but not necessarily the ones that generate the most engagement in terms of likes, views and shares
+          Videos on TikTok are mostly short-lived, but those not necessarily the ones that generate the most viewer engagement
         </h1>
         <h2 class="title">
-          In this visualization, explore the lengths of videos that generate the most engagement from Tiktok Platform users based on the number of views, number of comments, number of shares, and number of likes (averaged). In addition, you have the option to filter the data by upload date using the slider
+          In this visualization, explore the lengths of videos that generate the most engagement from TikTok users based on the average number of views, likes, comments and shares.
+          In addition, you have the option to filter the data by upload date using the slider.
         </h2>
       </header>
       <main>
