updated titles for video posting visualization

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
         </h1>
         <h2 class="title">
           In this visualization, explore the evolution of French-speaking media on TikTok based on view count, comment count, share count, and like count per month.
-          You have the option to select the media you want on the graph, and to filter the data by upload date using the slider.
+          You have the option to select the media you want on the graph by clicking on a point, and to filter the data by upload date using the slider.
         </h2>
       </header>
       <main>
@@ -182,7 +182,7 @@
     <div id="video-posting" class="tab-content">
       <header>
         <h1>
-          Posting and engagement
+          Friday nights seem to be a popular time slot for views
         </h1>
         <h2 class="title">
           In this visualization, you can see the total or weekly average of a selected metric for different time slots throughout the week. 
@@ -197,11 +197,11 @@
             <div id="vp-controls-sort-by"></div>
             <div class="radio-buttons" id="vp-radio-buttons" >
               <label>
-                <input type="radio" name="viewType" value="true" title="Total" checked>
+                <input type="radio" name="viewType" value="true">
                 <h3>Total</h3>
               </label>
               <label>
-                <input type="radio" name="viewType" value="false">
+                <input type="radio" name="viewType" value="false" checked>
                 <h3>Weekly Average</h3>
               </label>
             </div>
