updated title and sizing for media outlets visualization

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     <div id="overview" class="tab-content">
       <header>
         <h1>
-          Media Outlets
+          Hugo Décrypte and Brut. are the media outlets that seems to generate the most viewer engagement in our data
         </h1>
         <h2 class="title">
           In this visualization, explore the evolution of French-speaking media on TikTok based on view count, comment count, share count, and like count per month.
